--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,12 +1,105 @@
+/* Palette de couleur 
+ * Maurice-Brown : rgb(152, 94, 37);
+ * Maurice-Pink : rgb(133, 83, 66);
+ * Maurice-Purple : rgb(95, 65, 69);
+ * Sea : rgb(68, 167, 196);
+ */
+
 /*Généralité*/
 body {
-    background-color: #535c68;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(../images/maurice-waterfall.jpg);
+    background-size: cover;
+    height: 100vh;
 }
 
 /*HEADER*/
 
 /*MAIN*/
+.clock {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 10px solid rgb(68, 167, 196);
+    border-radius: 50%;
+    width: 20rem;
+    height: 20rem;
+}
 
+.clock-face {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 
+.hand {
+    width: 50%;
+    height: 5px;
+    border-radius: 3px;
+}
+
+.hour-hand {
+    background-color: rgb(152, 94, 37);
+}
+
+.min-hand {
+    background-color: rgb(133, 83, 66);
+}
+
+.second-hand {
+    background-color: rgb(95, 65, 69);
+}
 
 /*FOOTER*/
+
+
+/*Solution*/
+/* html {
+    background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
+    background-size: cover;
+    font-family: 'helvetica neue';
+    text-align: center;
+    font-size: 10px;
+}
+
+body {
+    margin: 0;
+    font-size: 2rem;
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+}
+
+.clock {
+    width: 30rem;
+    height: 30rem;
+    border: 20px solid white;
+    border-radius: 50%;
+    margin: 50px auto;
+    position: relative;
+    padding: 2rem;
+    box-shadow:
+        0 0 0 4px rgba(0, 0, 0, 0.1),
+        inset 0 0 0 3px #EFEFEF,
+        inset 0 0 10px black,
+        0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.clock-face {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-3px);
+    account for the height of the clock hands
+}
+
+.hand {
+    width: 50%;
+    height: 6px;
+    background: black;
+    position: absolute;
+    top: 50%;
+} */
